# woah

./: .gitignore  Cargo.toml  README.md
src/: core.rs  item.rs  item_registry.rs  lib.rs
src/block/: client.rs  mod.rs  permutation.rs  registry.rs  state.rs  traits.rs
src/code_gen/: generator.rs  mod.rs
src/core/: bedrock_generator.rs  core_registry.rs  metadata.rs  mod.rs  sprite.rs  utilities.rs
src/entity/: event.rs  mod.rs
src/item/: client.rs  item_registry.rs  mod.rs
src/molang/: mod.rs
template_encoder/: Cargo.toml
template_encoder/src/: lib.rs
templates/block/: block.json  block_permutation.json  block_state_arr.json  block_state_range.json  block_trait.json  terrain_texture.json
templates/items/: item.json  item_texture.json  item_texture_entry.json
templates/manifest/: behavior_pack.json  resource_pack.json  script_module.json
