[package]
name = "woah"
description = "an MCBE add-on creation framework, from scratch."
version = "0.1.0"
edition = "2024"

[dependencies]
eo = { git = "https://github.com/NaKeRNarolino/eo.git", version = "0.1.0" }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tera = { version = "1.20.0" }
formatjson = "0.3.1"
lazy_static = "1.5.0"
anyhow = "1.0.98"
maplit = "1.0.2"
serde_json = "1.0.140"
image = "0.25.6"

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]